[package]
name = "solana-program-svm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-bpf-loader-program = "2.1.0"
solana-client = "2.1.0"
solana-compute-budget-program = "2.1.0"
solana-compute-budget = "2.1.0"
solana-logger = "2.1.0"
solana-program-runtime = "2.1.0"
solana-sdk = "2.1.0"
solana-svm = "2.1.0"
solana-svm-transaction = "2.1.0"
solana-system-program = "2.1.0"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
bincode = "1.3.3"
serde = "1.0.213"                                             # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.15"
serde_derive = "1.0.213"                                      # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.132"
serde_with = { version = "3.11.0", default-features = false }
